Desarrollo y finalización del FrontEnd
